<!--
  ~ Copyright (c) 2015. Vijai Chandra Prasad R.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see http://www.gnu.org/licenses
  -->

<resources>
    <string name="app_name">MyPortfolio</string>
    <string name="movies">Popular Movies</string>
    <string name="hawk">Stock hawk</string>
    <string name="builditbigger">Build it Bigger</string>
    <string name="material">make your app material</string>
    <string name="ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
</resources>
